# Mannager-axum

./: index.html  package.json
rs-backend/: Cargo.toml
rs-backend/src/: main.rs  router.rs
src/: App.vue  main.js  router.js
src/components/: AddDevice.vue  Online.vue
