[package]
name = "rs-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0.67"
axum = { version="0.6.1", features = ["headers"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.88"
tower-http = {version = "0.3.5", features = ["fs", "trace"]}
tokio = { version = "1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
futures = "0.3.25"
tokio-icmp-echo = "0.4.1"